--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
   margin: 10px auto;
 }
 
+section{
+  margin: 20px 0px;
+}
+
 /* ISTRUZIONI HEADER */
 
 .logo img{
@@ -32,18 +36,42 @@ header ul li a{
   font-family: 'Montserrat', sans-serif;
 }
 
-/* ISTRUZIONI SECTION-ROW */
-section{
-  margin: 20px 0px;
+/* ISTRUZIONI MAIN */
+
+
+/* section jumbotron */
+.jumbotron{
+  height: 500px;
+  background-image: url(../img/banner.jpg);
+  background-position: center;
+  position: relative;
+  border-radius: 10px;
 }
 
-/* section row uno */
-.jumbotron{
-  /* debug */
-  height: 300px;
-  background-color: orange;
-  text-align: center;
-  line-height: 300px;
+.layover{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left:0;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+.brand_claim{
+  width: 70%;
+  padding-left: 60px;
+  margin-bottom: 100px;
+  position: absolute;
+  bottom:0px;
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+}
+
+.brand_claim h3{
+  font-weight: normal;
+  font-size: 24px;
+  color: white;
 }
 
 /* section row due */
